[package]
name = "oxide-gate"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
eventsource-stream = "0.2"
tokio-stream = "0.1"

[dev-dependencies]
# Ensure axum-test is compatible with axum 0.7
axum-test = "16.0"
